force-app/main/default/objects/LLC_BI__Roll_Up_Column__c/LLC_BI__Roll_Up_Column__c.object-meta.xml
<CustomObject>
    <description>This object is used to control what columns are displayed in the Roll-Up table and what formulas drive the values that are displayed in the columns.</description>
    <label>Roll-Up Column</label>
    <nameField>
        <label>Roll-Up Column Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Roll-Up Columns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>