force-app/main/default/objects/LLC_BI__Roll_Up_Column__c/fields/LLC_BI__Help_Text_Description__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Help_Text_Description__c</fullName>
    <description>If this value is filled out, then an information icon will be displayed next to the column title and when a user hovers over that icon, this help text is displayed.</description>
    <label>Help Text Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>