force-app/main/default/objects/LLC_BI__Roll_Up_Column__c/fields/LLC_BI__Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Sort_Order__c</fullName>
    <description>Controls where this column is displayed in the Roll-Up table.</description>
    <label>Sort Order</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>